+ajustements a propos, vehicules , avis

--- a/templates/navleft/legales/apropos.html.twig
+++ b/templates/navleft/legales/apropos.html.twig
@@ -31,12 +31,12 @@
 			<div class="main-container ">
 				{% include "partials/headermobile.html.twig" %}
 
-				<div class="content-wrapper m-4   ">
+				<div class="content-wrapper m-4 rounded">
 					<div >
 						<h3>
 							Chauffeur privé
 						</h3>	
-						<img  src="assets/images/photo-apropos.png" height:"400px" alt"a propos">
+						<img  src="assets/images/photo-apropos.png" height:"400px" alt"a propos" class="rounded">
 					<div class="content-text-context mt-5 ">Riche d’une expérience de 20 années dans le secteurs du VTC, IzyDrive c'est la garentis d'un trajet confortable  et 100% sécursé. 
 						Votre chauffeur expérimenté réalisera l'ensemble de vos trajets avec professionnalisme et discrétion. Des services et avantages qui profitent aux particuliers comme au professionnels, entreprises et sociétés.
 						<br> 
