--- a/templates/navleft/presentations/avis.html.twig
+++ b/templates/navleft/presentations/avis.html.twig
@@ -39,7 +39,7 @@
 							<div class="content-text">Riche d’une expérience de conduite de 20 années, votre chauffeur maitrise 5 langues : anglais, français, espagnol, portugais et brésilien. Diplômé, il est titulaire du N° de licence.</div>
 							<button class="content-button bg-white  bold"><a class="bg-white text-success text-decoration-none"  href="{{path('app_contact')}}">Contactez</a></button>
 						</div>
-						<img class="content-wrapper-img" src="https://assets.codepen.io/3364143/glass.png" alt="">
+						<img class="content-wrapper-img" src="" alt="">
 					</div>
 					{# <div class="content-section">
 																<div class="content-section-title">Installed</div>
