--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -70,7 +70,7 @@
 						class="p-4 mb-3  my-5">
 						{# on affiche les données de contact crée dans le service yam  #}
 						<div class="border  text-center text-white">
-							<p class="mb-0 font-weight-bold">Addresse</p>
+							<p class="mb-0 font-weight-bold">Adresse</p>
 							<p class="mb-4">{{ contact_adress }}</p>
 
 							<p class="mb-0 font-weight-bold">Phone</p>
@@ -78,7 +78,7 @@
 								<a href="#">{{ contact_phone }}</a>
 							</p>
 
-							<p class="mb-0 font-weight-bold">Addresse email</p>
+							<p class="mb-0 font-weight-bold">Adresse email</p>
 							<p class="mb-0">
 								<a href="#">{{ contact_email }}</a>
 							</p>
