--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -37,11 +37,11 @@
 								Votre chauffeur privé
 							</h2>
 
-							<div class="content-text">Un service de transport de qualite, rapide et efficace.
+							<div class="content-text">Un service de transport de qualité, rapide et efficace.
 							</div>
 							{# Commandez une course sans plus attendre avec votre chauffeur préféré. #}
 							<button class="content-button  animate__flipInY animate__animated">
-								<a class="text-decoration-none text-white" href="{{path('app_order_new')}}">Reservez!</a>
+								<a class="text-decoration-none text-white" href="{{path('app_order_new')}}">Réservez!</a>
 							</button>
 						</div>
 
@@ -82,7 +82,7 @@
 								<span>
 									Un tarif connu à l’avance et sans surprise à l’arrivée
 								</span>
-								<div class="app-card__subtext">A la réservation ou lors de votre demande de devis, un tarif vous est annoncé. Ce tarif est celui que vous réglerez une fois la course terminée. Et ce, qu’il y ait des embouteillages, plus de bagages de prévu ou une personne supplémentaire
+								<div class="app-card__subtext">A la réservation ou lors de votre demande de devis, un tarif vous est annoncé. Ce tarif est celui que vous réglerez une fois la course terminée. Et ce, qu’il y ait des embouteillages, plus de bagages que prévu ou une personne supplémentaire
 																		.</div>
 								<div class="app-card-buttons"><img src="https://vtcexcellence.com/wp-content/uploads/2021/05/VTC-Toulouse-Chauffeur-jpg.jpg" alt="image vtc">
 								{# <button class="content-button status-button">Update</button> #}
