--- a/templates/navleft/presentations/apropos.html.twig
+++ b/templates/navleft/presentations/apropos.html.twig
@@ -37,10 +37,10 @@
 							Chauffeur privé
 						</h3>	
 						<img  src="assets/images/photo-apropos.png" height:"400px" alt"a propos">
-					<div class="content-text-context mt-5 ">Riche d’une expérience de 20 années dans le secteurs du VTC, IzyDrive c'est la garentis d'un trajet confortable  et 100% sécursé. 
+					<div class="content-text-context mt-5 ">Riche d’une expérience de 20 années dans le secteurs du VTC, IzyDrive c'est la garantie d'un trajet confortable  et 100% sécurisé. 
 						Votre chauffeur expérimenté réalisera l'ensemble de vos trajets avec professionnalisme et discrétion. Des services et avantages qui profitent aux particuliers comme au professionnels, entreprises et sociétés.
 						<br> 
-						Modernes et accessibles, retrouvez nos service sur toutes les plateforme partout en France.
+						Modernes et accessibles, retrouvez nos service sur toutes les plateformes partout en France.
 							
 													
 
