--- a/templates/navleft/presentations/vehicules.html.twig
+++ b/templates/navleft/presentations/vehicules.html.twig
@@ -155,7 +155,7 @@
 								<span>
 									MODERNE
 								</span>
-								<div class="app-card__subtext">VTC IZY DRIVE, riche de l'expérience depuis 25 ans pour vous accompagner dans vos dépalacements en France métropolitan. Où que vous soyez dans la Haute Garonne, faites appel à vore chauffeur pour tous vos besoins. Votre confort est notre priorité.</div>
+								<div class="app-card__subtext">VTC IZY DRIVE, riche de l'expérience depuis 25 ans pour vous accompagner dans vos déplacements en France métropolitaine. Où que vous soyez en Haute-Garonne, faites appel à vore chauffeur pour tous vos besoins. Votre confort est notre priorité.</div>
 								<div class="app-card-buttons"><img src="https://kirotravel.com/wp-content/uploads/2021/05/Voiture-noire.jpeg" alt="#">
 									{# <button class="content-button status-button">Update</button>
 									{# <div class="menu"></div> #}
@@ -166,9 +166,9 @@
 								<span>
 									COVID 19 ET LES AUTRES
 								</span>
-								<div class="app-card__subtext"> Tous nos vehicules respectent les normes sanitaire. Equipé de la technologie  son équipé d'un systeme de 
+								<div class="app-card__subtext"> Tous nos vehicules respectent les normes sanitaire. Equipé de la technologie  son équipé d'un systeme de purification d'air à double abre à cames.
 								
-								Quelle que soit votre destination ou votre demande personnalisée, que vous soyez particuliers ou professionnels, nous vous proposons un service de transport de personnes de qualité, transparent et sécurisé, avec des chauffeurs professionnels, expérimentés et à votre écoute.
+								Quelle que soit votre destination ou votre demande personnalisée, que vous soyez particulier ou professionnel, nous vous proposons un service de transport de personnes de qualité, transparent et sécurisé, avec des chauffeurs professionnels, expérimentés et à votre écoute.
 								</div>
 								<div class="app-card-buttons"><img src="https://montransport.com/local/provider_slideshow/3879/7385/5842eaf3e3e289.63863916.jpg" alt="">
 									{# <button class="content-button status-button">Update</button> #}
