--- a/templates/navleft/services/aeroport_gare.html.twig
+++ b/templates/navleft/services/aeroport_gare.html.twig
@@ -34,7 +34,7 @@
 					<div class="content-wrapper-header">
 							<h3 class="img-content text-center container animate__animated animate__rotateInDownRight">
 								👉 Votre VTC Izy Drive permet, à bord de ses transports alternatifs avec un prix fixé à l'avance de vous accompagner en gares, aux aérogares, et dans tous les manifestations ou conférences professionnelles. <br>
-								👉 Vous portez garant et le maximum de confort avant votre départ à bord des trains, en voyage. La priorité est de vous satisfaire. 
+								👉 Nous vous garantissont le maximum de confort avant votre départ en voyage. Notre priorité est de vous satisfaire. 
 							</h3>
 							
 						<div class="content-wrapper-context">
@@ -67,7 +67,7 @@
 									</h3>
 								</span>
 								<img src="https://images.pexels.com/photos/69121/passenger-traffic-airline-aviation-air-transportation-69121.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
-								<div class="app-card__subtext">Quelle que soit votre destination ou votre demande personnalisée, que vous soyez particuliers ou professionnels, nous vous proposons un service de transport de personnes de qualité, transparent et sécurisé, avec des chauffeurs professionnels, expérimentés et à votre écoute.
+								<div class="app-card__subtext">Quelle que soit votre destination ou votre demande personnalisée, que vous soyez particulier ou professionnel, nous vous proposons un service de transport de personnes de qualité, transparent et sécurisé, avec des chauffeurs professionnels, expérimentés et à votre écoute.
 								</div>
 								<div class="app-card-buttons">
 
