--- a/templates/partials/navleft.html.twig
+++ b/templates/partials/navleft.html.twig
@@ -6,7 +6,7 @@
 								A propos 
 							</a>
 							<a href="{{ path('vehicules') }}">
-								Mes véhicules
+								Nos véhicules
 							</a>
 							<a href="{{ path('avis') }}">
 								Vos avis
@@ -37,7 +37,7 @@
 					<div class="side-title">Légal</div>
 					<div class="side-menu">
 					<a href="{{ path('mentionslegales') }}">
-							Mentions légals
+							Mentions légales
 						</a>
 						<a href="{{ path('conditionsgenerales') }}">Conditions générales</a>
 					
