--- a/templates/security/login.html copy.twig
+++ b/templates/security/login.html copy.twig
@@ -48,7 +48,7 @@
 						<div class="checkbox mb-3">
 							<label>
 								<input type="checkbox" name="_remember_me">
-								Remember me
+								Se souvenir de moi
 							</label>
 						</div>
 
