--- a/templates/reset_password/reset.html.twig
+++ b/templates/reset_password/reset.html.twig
@@ -1,12 +1,17 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Reset your password{% endblock %}
+{% block title %}réinitialisation du mot de passe
+{% endblock %}
 
 {% block body %}
-    <h1>Reset your password</h1>
+	<div class="container">
+		<h1>Réinitialisation du mot de passe
+		</h1>
 
-    {{ form_start(resetForm) }}
-        {{ form_row(resetForm.plainPassword) }}
-        <button class="btn btn-primary">Reset password</button>
-    {{ form_end(resetForm) }}
+		{{ form_start(resetForm, , {'attr':{'class':'form form-control'}}) }}
+		{{ form_row(resetForm.plainPassword, , {'attr':{'class':'form form-control'}}) }}
+		<button class="btn btn-primary p-2 btn-block ">Réinitialiser</button>
+		{{ form_end(resetForm) }}
+
+	</div>
 {% endblock %}
