--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -1,22 +1,26 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Reset your password{% endblock %}
+{% block title %}Mise à jour du mot de passe {% endblock %}
 
 {% block body %}
     {% for flash_error in app.flashes('reset_password_error') %}
         <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
     {% endfor %}
-    <h1>Reset your password</h1>
+
+    <div class="containeer bg-info">
+    
+    <h1 class="text-center p-2">Réinitialiser du mot de passe </h1>
 
     {{ form_start(requestForm) }}
         {{ form_row(requestForm.email) }}
         <div>
             <small>
-                Enter your email address and we will send you a
-                link to reset your password.
+                Merci d'entrer une adresse email valide et liée à votre compte pour receb=voir le mail de réinitilisation.<br> 
+                Lien de réinitialiser. 
             </small>
         </div>
 
-        <button class="btn btn-primary">Send password reset email</button>
+        <button class="btn btn-primary btn-block p-2">Envoyer le lien</button>
     {{ form_end(requestForm) }}
+    </div>
 {% endblock %}
