MAJ contenue vue visite chateaux

--- a/templates/navleft/legales/mentionslegales.html.twig
+++ b/templates/navleft/legales/mentionslegales.html.twig
@@ -39,7 +39,7 @@
 					<h1 class="text-centers ide-title">MENTIONS LÉGALES</h1>
 					<h2 class="side-title">Editeur du site :</h2>
 					<p>
-						All In Drive - Frédéric Vergne<br>
+						Essaouari Soufiane<br>
 						9 rue de Condé<br>
 						33064 Bordeaux<br>
 						Siren : 881 694 939<br>
