--- a/templates/navleft/services/aeroport_gare.html.twig
+++ b/templates/navleft/services/aeroport_gare.html.twig
@@ -27,20 +27,20 @@
 			</div>
 
 			{# -----header mobile ---------- #}
-			<div class="main-container">
+			<main class="main-container">
 				{% include "partials/headermobile.html.twig" %}
 
 				<div class="content-wrapper">
 					<div class="content-wrapper-header">
-							<h3 class="img-content text-center container animate__animated animate__rotateInDownRight">
-								👉 Votre VTC Izy Drive permet, à bord de ses transports alternatifs avec un prix fixé à l'avance de vous accompagner en gares, aux aérogares, et dans tous les manifestations ou conférences professionnelles. <br>
-								👉 Vous portez garant et le maximum de confort avant votre départ à bord des trains, en voyage. La priorité est de vous satisfaire. 
-							</h3>
-							
-						<div class="content-wrapper-context">
-							{# <div class="content-text">Riche d’une expérience de conduite de 20 années, votre chauffeur maitrise 5 langues : anglais, français, espagnol, portugais et brésilien. Diplômé, il est titulaire du N° de licence.</div> #}
+						<h3 class="img-content text-center container animate__animated animate__rotateInDownRight">
+							👉 Votre VTC Izy Drive permet, à bord de ses transports alternatifs avec un prix fixé à l'avance de vous accompagner en gares, aux aérogares, et dans tous les manifestations ou conférences professionnelles.
+							<br>
+							👉 Vous portez garant et le maximum de confort avant votre départ à bord des trains, en voyage. La priorité est de vous satisfaire.
+						</h3>
+
+						<div class="content-wrapper-context">{# <div class="content-text">Riche d’une expérience de conduite de 20 années, votre chauffeur maitrise 5 langues : anglais, français, espagnol, portugais et brésilien. Diplômé, il est titulaire du N° de licence.</div> #}
 							{# <button class="content-button bg-white  bold">
-								<a class="bg-white text-success text-decoration-none" href="{{path('app_contact')}}">Contactez</a>
+							<a class="bg-white text-success text-decoration-none" href="{{path('app_contact')}}">Contactez</a>
 							</button> #}
 						</div>
 						{# <img class="content-wrapper-img" src="https://assets.codepen.io/3364143/glass.png" alt=""> #}
@@ -49,33 +49,30 @@
 					<div class="content-section">
 
 						<div class="apps-card">
-							<div class="app-card text-center">
+							<div class="app-card text-center h-100">
 								<span>
 									<h3 class="animate__flip">En ville
 									</h3>
 								</span>
-								<div class="app-card__subtext">Vous devez vous rendre à un rendez-vous ? Vous allez à l'aéroport ? Faite appel aux services de VTC Izy Drive. Votre chauffeur de luxe effectue tous vos transferts vers les aéroports et gares de votre ville. </div>
+								<div class="app-card__subtext">Vous devez vous rendre à un rendez-vous ? Vous allez à l'aéroport ? Faite appel aux services de VTC Izy Drive. Votre chauffeur de luxe effectue tous vos transferts vers les aéroports et gares de votre ville.
+								</div>
 								<div class="app-card-buttons">
 									<img src="https://images.pexels.com/photos/1170178/pexels-photo-1170178.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="image">
 
-									<div class="menu"></div>
-								</div>
+
+								</div><hr>
 							</div>
-							<div class="app-card text-center">
+							<div class="app-card text-center h-100">
 								<span>
 									<h3 class="animate__flip">Dans les gares
 									</h3>
 								</span>
-								<img src="https://images.pexels.com/photos/69121/passenger-traffic-airline-aviation-air-transportation-69121.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+								<img src="https://images.pexels.com/photos/69121/passenger-traffic-airline-aviation-air-transportation-69121.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="photo"><hr>
 								<div class="app-card__subtext">Quelle que soit votre destination ou votre demande personnalisée, que vous soyez particuliers ou professionnels, nous vous proposons un service de transport de personnes de qualité, transparent et sécurisé, avec des chauffeurs professionnels, expérimentés et à votre écoute.
-								</div>
-								<div class="app-card-buttons">
-
-									<div class="menu"></div>
 								</div>
 							</div>
 
-							<div class="app-card text-center">
+							<div class="app-card text-center h-100">
 								<span>
 									<h3 class="animate__flip">Aéroports
 									</h3>
@@ -83,13 +80,13 @@
 								<div class="app-card__subtext">Nous opérons 7J/7 et 24h/24, pour vos déplacements en VTC sur Paris, Bordeaux et Strasbourg, vers les aéroports, mais aussi pour vos rendez-vous professionnels, conférences, parcs d'affaires etc. Et pour toute demande d'information complémentaire, n'hésitez pas à nous contacter. A bientôt !</div>
 								<div class="app-card-buttons">
 									<img src="https://images.pexels.com/photos/9846135/pexels-photo-9846135.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="image ">
-									<div class="menu"></div>
-								</div>
+
+								</div><hr>
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>
+			</main>
 		</div>
 		<div class="overlay-app"></div>
 	</div>
